--- a/app/templates/cam_data_register.html
+++ b/app/templates/cam_data_register.html
@@ -18,8 +18,8 @@
         
         #video-container {
             position: relative;
-            width: 320px; /* Adjust width of the video box */
-            height: 240px; /* Adjust height of the video box */
+            width: 520px; /* Adjust width of the video box */
+            height: 440px; /* Adjust height of the video box */
         }
 
         video {
@@ -78,7 +78,7 @@
         window.onload = function() {
             startCamera();
             setTimeout(function() {
-                window.location.href = "newpage.html"; // Redirect to another page after 5 seconds
+                window.location.href = "/registertologin"; // Redirect to another page after 5 seconds
             }, 20000); // 5000 milliseconds = 5 seconds
         };
     </script>
