single user auth ready

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,7 @@
 {% block content %}
 
 <div class="container-fluid">
+    <h1>Hello {{ username }}</h1>
     <button id="logout-btn" class="btn btn-primary">logout</button>
 </div>
 
