--- a/app/templates/cam_data_login.html
+++ b/app/templates/cam_data_login.html
@@ -70,7 +70,7 @@
                     video.srcObject = stream;
                     // video.srcObject = video;
                     video.play();
-                    setInterval(sendFrame, 200); // Send frame to server every second
+                    setInterval(sendFrame, 1000); // Send frame to server every second
                 })
                 .catch(function (err) {
                     console.log('Error: ' + err);
@@ -107,8 +107,8 @@
         window.onload = function() {
             startCamera();
             setTimeout(function() {
-                window.location.href = "newpage.html"; // Redirect to another page after 5 seconds
-            }, 10000); // 5000 milliseconds = 5 seconds
+                window.location.href = "/loginunsuccess"; // Redirect to another page after 5 seconds
+            }, 20000); // 5000 milliseconds = 5 seconds
         };
     </script>
 
