--- a/app/templates/cam_data_register.html
+++ b/app/templates/cam_data_register.html
@@ -84,6 +84,10 @@
     </script>
 
     <!-- Video box to display real-time camera stream -->
-    <div id="video-container"><video id="video" width="520" height="440" autoplay></video></div>
+    <h1 style="color: blue;">Capturing your face. Stay still</h1>
+    <div id="video-container">
+        
+        <video id="video" width="520" height="440" autoplay></video>
+    </div>
 </body>
 </html>
