--- a/app/templates/cam_data_login.html
+++ b/app/templates/cam_data_login.html
@@ -18,8 +18,8 @@
         
         #video-container {
             position: relative;
-            width: 320px; /* Adjust width of the video box */
-            height: 240px; /* Adjust height of the video box */
+            width: 520px; /* Adjust width of the video box */
+            height: 440px; /* Adjust height of the video box */
         }
 
         video {
@@ -34,35 +34,7 @@
 <body>
     <script>
 
-        // const constraints = {
-        //     video: {
-        //     width: {
-        //         min: 1280,
-        //         ideal: 1920,
-        //         max: 2560,
-        //     },
-        //     height: {
-        //         min: 720,
-        //         ideal: 1080,
-        //         max: 1440,
-        //     },
-        //     },
-        // };
-        // Function to capture video stream from client's device
         async function startCamera() {
-            // constraints.video.facingMode = "user";
-
-            // try {
-
-            //     videoStream = await navigator.mediaDevices.getUserMedia(constraints);
-            //     var video = document.getElementById('video');
-            //     video.srcObject = videoStream;
-            //     video.play();
-            //     setInterval(sendFrame, 1000);
-            //     } catch (err) {
-            //     alert("Could not access the camera");
-            //     }
-            // }
 
             navigator.mediaDevices.getUserMedia({ video: { width: 640, height: 480 } })
                 .then(function (stream) {
@@ -113,6 +85,7 @@
     </script>
 
     <!-- Video box to display real-time camera stream -->
+    <h1 style="color: blue;">Capturing your face. Stay still</h1>
     <div id="video-container"><video id="video" width="520" height="440" autoplay></video></div>
 </body>
 </html>
