--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home - TheMusicianTheory{% endblock %}
+{% block title %}Login - Secure Face Authentication{% endblock %}
 
 {% block content %}
 
